RESOLVED FIXED272425
[macOS] Crash when using text indicator style
https://bugs.webkit.org/show_bug.cgi?id=272425
Summary [macOS] Crash when using text indicator style
Aditya Keerthi
Reported 2024-04-09 16:43:17 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-04-09 16:43:24 PDT
Aditya Keerthi
Comment 2 2024-04-09 17:10:03 PDT
EWS
Comment 3 2024-04-09 19:40:23 PDT
Committed 277283@main (455df18d3888): <https://commits.webkit.org/277283@main> Reviewed commits have been landed. Closing PR #27056 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.