[macOS] Crash when using text indicator style https://bugs.webkit.org/show_bug.cgi?id=272425 rdar://126171238

Reviewed by Wenson Hsieh and Abrar Rahman Protyasha.

Check for support in `WKTextIndicatorStyleManager` to avoid crashes due to
missing symbols.

* Source/WebKit/Shared/Cocoa/UnifiedTextReplacementSoftLink.h: Added.
* Source/WebKit/Shared/Cocoa/UnifiedTextReplacementSoftLink.mm: Added.
* Source/WebKit/SourcesCocoa.txt:
* Source/WebKit/UIProcess/mac/WKTextIndicatorStyleManager.h:
* Source/WebKit/UIProcess/mac/WebViewImpl.mm:
(WebKit::WebViewImpl::addTextIndicatorStyleForID):
* Source/WebKit/WebKit.xcodeproj/project.pbxproj:

Canonical link: https://commits.webkit.org/277283@main